@@ -3,6 +3,7 @@ package plagiatchecker.statservice.Repository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Component;
 import plagiatchecker.statservice.Domain.Entities.StoredFile;
+import plagiatchecker.statservice.Domain.Entities.StoredBytes;
 import plagiatchecker.statservice.Domain.Interfaces.Repositories.WordMapStorageI;
 import java.io.File;
 import java.io.FileWriter;
@@ -17,27 +18,35 @@ public class WordMapStorage implements WordMapStorageI {
 
     @Override
     public boolean saveFile(String filepath, byte[] fileContent) {
-        File file = new File(dirName + filepath);
+        File directory = new File(dirName);
+        if (!directory.exists()) {
+            directory.mkdirs();
+        }
+
+        File file = new File(dirName, filepath);
         try {
-            FileWriter fileWriter = new FileWriter(file);
-            fileWriter.write(new String(fileContent));
-            fileWriter.close();
+            Files.write(file.toPath(), fileContent);
+            return true;
         } catch (IOException e) {
             return false;
         }
-
-        return true;
     }
 
+
     @Override
-    public StoredFile getFile(String filepath) {
+    public StoredBytes getFile(String filepath) {
+        File directory = new File(dirName);
+        if (!directory.exists()) {
+            directory.mkdirs();
+        }
+
         try {
-            String content = Files.readString(Paths.get(dirName + filepath));
-            StoredFile storedFile = new StoredFile(filepath, content);
-            return storedFile;
+            byte[] content = Files.readAllBytes(Paths.get(dirName, filepath));
+            return new StoredBytes(filepath, content);
         } catch (Exception e) {
             return null;
         }
     }
+
 }
 
